# btc_data_collection

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  docker-compose.yml  todo.md
secrets/: s3_credentials.example
src/: collector.rs  main.rs  models.rs  writer.rs
